style: setting fixed maxed width so it doesnt look stretched

--- a/src/index.css
+++ b/src/index.css
@@ -84,8 +84,8 @@ button {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 8; /* number of lines to show */
-  line-clamp: 8;
+  -webkit-line-clamp: 7; /* number of lines to show */
+  line-clamp: 7;
   -webkit-box-orient: vertical;
 }
 
